# BarCodeReader

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
cmake_modules/: FindOPENCV.cmake
src/: main.cc
src/decoding/: decoder.cc  decoder.hh
src/detection/: barcode-extractor.cc  barcode-extractor.hh  barcode-extractor.hxx  barcodeextractor.cc  barcodeextractor.hh  barcodeextractor.hxx  long-bar-filter.cc  long-bar-filter.hh  long-bar-filter.hxx  longbarfilter.cc  longbarfilter.hh  longbarfilter.hxx
src/misc/: distance.hh  rotation.hh
src/preprocess/: blackhat.cc  blackhat.hh  grayscale.cc  grayscale.hh  threshold.cc  threshold.hh
