CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
PROJECT(BarCodeReader)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
FIND_PACKAGE(OpenCV 3 REQUIRED)

ADD_COMPILE_OPTIONS(-std=c++1y -Wall -Wextra -pedantic)
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -D_DEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")


INCLUDE_DIRECTORIES("src/ ${OPENCV_INCLUDE_DIRS}")

FILE(GLOB_RECURSE SOURCES "src/*")

ADD_EXECUTABLE(BarCodeReader ${SOURCES} src/main.cc)
TARGET_LINK_LIBRARIES(BarCodeReader ${OPENCV_LIBRARIES})